# autonomous-control-system

./: .gitignore  ARCHITECTURE.md  README.md  package.xml  requirements.txt  run_dashboard.sh  run_demo.sh  run_foxglove.sh  setup.cfg  setup.py
configs/: demo.yaml
dashboard/: state.json
data/maps/levine/: race2_map.pgm  race2_map.yaml
data/vision/: calibration_results.npz
data/waypoints/: race2_waypoints_full_smoothed.csv  waypoints_oncar.csv  waypoints_onsim.csv
docs/autonomy-notes/: README.md
foxglove/: README.md
logs/: demo_20260421_162716.csv  demo_20260421_162716_summary.json  demo_20260421_163236.csv  demo_20260421_163236_summary.json  demo_20260421_163404.csv  demo_20260421_163404_summary.json  demo_20260421_163823.csv  demo_20260421_163823_summary.json  demo_20260421_164124.csv  demo_20260421_164124_summary.json  demo_20260421_164249.csv  demo_20260421_164249_summary.json  demo_20260421_175812.csv  demo_20260421_175812_summary.json  demo_20260421_180146.csv  demo_20260421_180146_summary.json  demo_20260421_180501.csv  demo_20260421_180501_summary.json  demo_20260421_180924.csv  demo_20260421_180924_summary.json  demo_20260421_181418.csv  demo_20260421_181418_summary.json  demo_20260421_192200.csv  demo_20260421_192200_summary.json  demo_20260421_192552.csv
rviz/: demo.rviz
scripts/waypoints/: overlay_waypoints_on_map.py  plan_waypoints_astar.py  smooth_waypoints.py
src/unified_autonomy/: __init__.py  config.py  dashboard_state.py  interfaces.py  main_demo.py  metrics.py  visualization.py
tools/vision/: README.md
(+29 files in other folders)
